# vfs.sftp

./: .gitignore  .travis.yml  CMakeLists.txt  FindSSH.cmake  README.md  appveyor.yml  azure-pipelines.yml
.github/workflows/: build.yml  increment-version.yml  sync-addon-metadata-translations.yml
debian/: changelog.in  control  copyright  rules
depends/common/libssh/: 01-removelegacy.patch  02-android.patch  02-build-static.patch  02-md5.patch  03-md5.patch  03-stack-protector.patch  04-android.patch  04-stack-protector.patch  05-android.patch  05-no-examples.patch  05-windows.patch  06-darwin.patch  06-windows.patch  06-windowsstore.patch  07-static-openssl.patch  07-windowsstore.patch  08-openssl-1.0.patch  08-static-openssl.patch  08-werror.patch  09-tvos.patch  09-werror.patch  10-openssl-1.1.0.patch  10-prevent-error-C4996.patch  10-tvos.patch  11-libssh-fix.patch  12-tvos.patch  flags.txt  libssh.sha256  libssh.txt
depends/common/openssl/: 01-android.patch  CMakeLists.txt  openssl.sha256  openssl.txt
depends/common/zlib/: 02-disable-example-binaries.patch
depends/windows/openssl/: 01-quote-cc.patch  CMakeLists.txt  openssl.sha256  openssl.txt
depends/windows/strawberryperl/: CMakeLists.txt  strawberryperl.sha256  strawberryperl.txt
depends/windowsstore/openssl/: CMakeLists.txt
src/: SFTPFile.cpp  SFTPSession.cpp  SFTPSession.h
vfs.sftp/: addon.xml  addon.xml.in
vfs.sftp/resources/language/resource.language.af_za/: strings.po
vfs.sftp/resources/language/resource.language.am_et/: strings.po
vfs.sftp/resources/language/resource.language.ar_sa/: strings.po
vfs.sftp/resources/language/resource.language.ast_es/: strings.po
vfs.sftp/resources/language/resource.language.az_az/: strings.po
vfs.sftp/resources/language/resource.language.be_by/: strings.po
vfs.sftp/resources/language/resource.language.bg_bg/: strings.po
vfs.sftp/resources/language/resource.language.bs_ba/: strings.po
vfs.sftp/resources/language/resource.language.ca_es/: strings.po
vfs.sftp/resources/language/resource.language.cs_cz/: strings.po
vfs.sftp/resources/language/resource.language.cy_gb/: strings.po
vfs.sftp/resources/language/resource.language.da_dk/: strings.po
vfs.sftp/resources/language/resource.language.de_de/: strings.po
vfs.sftp/resources/language/resource.language.el_gr/: strings.po
vfs.sftp/resources/language/resource.language.en_au/: strings.po
vfs.sftp/resources/language/resource.language.en_gb/: strings.po
vfs.sftp/resources/language/resource.language.en_nz/: strings.po
vfs.sftp/resources/language/resource.language.en_us/: strings.po
vfs.sftp/resources/language/resource.language.eo/: strings.po
vfs.sftp/resources/language/resource.language.es_ar/: strings.po
vfs.sftp/resources/language/resource.language.es_es/: strings.po
vfs.sftp/resources/language/resource.language.es_mx/: strings.po
vfs.sftp/resources/language/resource.language.et_ee/: strings.po
vfs.sftp/resources/language/resource.language.eu_es/: strings.po
vfs.sftp/resources/language/resource.language.fa_af/: strings.po
vfs.sftp/resources/language/resource.language.fa_ir/: strings.po
vfs.sftp/resources/language/resource.language.fi_fi/: strings.po
vfs.sftp/resources/language/resource.language.fo_fo/: strings.po
vfs.sftp/resources/language/resource.language.fr_ca/: strings.po
vfs.sftp/resources/language/resource.language.fr_fr/: strings.po
vfs.sftp/resources/language/resource.language.gl_es/: strings.po
vfs.sftp/resources/language/resource.language.he_il/: strings.po
vfs.sftp/resources/language/resource.language.hi_in/: strings.po
vfs.sftp/resources/language/resource.language.hr_hr/: strings.po
vfs.sftp/resources/language/resource.language.hu_hu/: strings.po
vfs.sftp/resources/language/resource.language.hy_am/: strings.po
vfs.sftp/resources/language/resource.language.id_id/: strings.po
vfs.sftp/resources/language/resource.language.is_is/: strings.po
vfs.sftp/resources/language/resource.language.it_it/: strings.po
vfs.sftp/resources/language/resource.language.ja_jp/: strings.po
vfs.sftp/resources/language/resource.language.ko_kr/: strings.po
vfs.sftp/resources/language/resource.language.lt_lt/: strings.po
vfs.sftp/resources/language/resource.language.lv_lv/: strings.po
vfs.sftp/resources/language/resource.language.mi/: strings.po
vfs.sftp/resources/language/resource.language.mk_mk/: strings.po
vfs.sftp/resources/language/resource.language.ml_in/: strings.po
vfs.sftp/resources/language/resource.language.mn_mn/: strings.po
vfs.sftp/resources/language/resource.language.ms_my/: strings.po
vfs.sftp/resources/language/resource.language.mt_mt/: strings.po
vfs.sftp/resources/language/resource.language.my_mm/: strings.po
vfs.sftp/resources/language/resource.language.nb_no/: strings.po
vfs.sftp/resources/language/resource.language.nl_nl/: strings.po
vfs.sftp/resources/language/resource.language.oc_fr/: strings.po
vfs.sftp/resources/language/resource.language.os_os/: strings.po
vfs.sftp/resources/language/resource.language.pl_pl/: strings.po
vfs.sftp/resources/language/resource.language.pt_br/: strings.po
vfs.sftp/resources/language/resource.language.pt_pt/: strings.po
vfs.sftp/resources/language/resource.language.ro_md/: strings.po
vfs.sftp/resources/language/resource.language.ro_ro/: strings.po
vfs.sftp/resources/language/resource.language.ru_ru/: strings.po
vfs.sftp/resources/language/resource.language.scn/: strings.po
vfs.sftp/resources/language/resource.language.si_lk/: strings.po
vfs.sftp/resources/language/resource.language.sk_sk/: strings.po
vfs.sftp/resources/language/resource.language.sl_si/: strings.po
vfs.sftp/resources/language/resource.language.sq_al/: strings.po
vfs.sftp/resources/language/resource.language.sr_rs/: strings.po
vfs.sftp/resources/language/resource.language.sr_rs@latin/: strings.po
vfs.sftp/resources/language/resource.language.sv_se/: strings.po
vfs.sftp/resources/language/resource.language.szl/: strings.po
vfs.sftp/resources/language/resource.language.ta_in/: strings.po
(+9 files in other folders)
